--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@ button:active {
   <div class="controls">
     <input type="text" id="name" placeholder="닉네임" />
     <select id="tier">
-      <option value="마고챌900+">마/고/챌 900 이상</option>
-      <option value="마고챌750">마/고/챌 750~899</option>
-      <option value="마고챌600">마/고/챌 600~749</option>
-      <option value="마고챌450">마/고/챌 450~599</option>
-      <option value="마고챌300">마/고/챌 300~449</option>
-      <option value="마고챌150">마/고/챌 150~299</option>
-      <option value="마고챌0">마/고/챌 0~149</option>
+      <option value="마그챌900+">마/그/챌 900 이상</option>
+      <option value="마그챌750">마/그/챌 750~899</option>
+      <option value="마그챌600">마/그/챌 600~749</option>
+      <option value="마그챌450">마/그/챌 450~599</option>
+      <option value="마그챌300">마/그/챌 300~449</option>
+      <option value="마그챌150">마/그/챌 150~299</option>
+      <option value="마그그챌0">마/그/챌 0~149</option>
       <option value="다이아1">다이아1</option>
       <option value="다이아2">다이아2</option>
       <option value="에메랄드+다이아">에메랄드+다이아</option>
@@ -196,13 +196,13 @@ button:active {
     const emoji = { 탑: "🔝", 정글: "🌲", 미드: "🧠", 원딜: "🎯", 서폿: "🛡️", 상관없음: "🎲", 미정: "🎲" };
   
    const scoreTable = {
-          "마고챌900+": { 탑: 56, 정글: 64, 미드: 62, 원딜: 58, 서폿: 54 },
-          "마고챌750": { 탑: 54, 정글: 62, 미드: 60, 원딜: 56, 서폿: 52 },
-          "마고챌600": { 탑: 52, 정글: 60, 미드: 57, 원딜: 53, 서폿: 50 },
-          "마고챌450": { 탑: 50, 정글: 58, 미드: 54, 원딜: 50, 서폿: 48 },
-          "마고챌300": { 탑: 48, 정글: 55, 미드: 52, 원딜: 47, 서폿: 45 },
-          "마고챌150": { 탑: 46, 정글: 52, 미드: 50, 원딜: 45, 서폿: 42 },
-          "마고챌0":   { 탑: 43, 정글: 49, 미드: 48, 원딜: 42, 서폿: 40 },
+          "마그그챌900+": { 탑: 56, 정글: 64, 미드: 62, 원딜: 58, 서폿: 54 },
+          "마그챌750": { 탑: 54, 정글: 62, 미드: 60, 원딜: 56, 서폿: 52 },
+          "마그챌600": { 탑: 52, 정글: 60, 미드: 57, 원딜: 53, 서폿: 50 },
+          "마그챌450": { 탑: 50, 정글: 58, 미드: 54, 원딜: 50, 서폿: 48 },
+          "마그챌300": { 탑: 48, 정글: 55, 미드: 52, 원딜: 47, 서폿: 45 },
+          "마그챌150": { 탑: 46, 정글: 52, 미드: 50, 원딜: 45, 서폿: 42 },
+          "마그챌0":   { 탑: 43, 정글: 49, 미드: 48, 원딜: 42, 서폿: 40 },
           "다이아1":   { 탑: 40, 정글: 45, 미드: 42, 원딜: 40, 서폿: 38 },
           "다이아2":   { 탑: 34, 정글: 38, 미드: 39, 원딜: 33, 서폿: 32 },
           "에메랄드+다이아": { 탑: 30, 정글: 36, 미드: 38, 원딜: 31, 서폿: 30 },
