--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
   <style>
     body {
       margin: 0;
@@ -96,7 +98,27 @@
 button:active {
   transform: scale(0.95);
   box-shadow: 0 0 5px #0ff;
-}
+}.view-players-btn {
+    display: inline-block;
+    text-align: center;
+    background-color: #00bfff;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 8px;
+    text-decoration: none;
+    font-weight: bold;
+    box-shadow: 0 0 10px rgba(0, 191, 255, 0.5);
+    transition: all 0.3s ease;
+  }
+
+  .view-players-btn:hover {
+    background-color: #fff;
+    color: #00bfff;
+    box-shadow: 0 0 15px rgba(0, 191, 255, 0.8);
+    transform: scale(1.05);
+  }
+
+
 
 
 
@@ -154,6 +176,12 @@ button:active {
     </select>
     <button onclick="addPlayer()">추가</button>
     <button onclick="clearPlayers()">초기화</button>
+    <button onclick="savePlayersToFirebase()">데이터 저장</button>
+    <div class="controls">
+      
+      <a href="firebaseviwer.html" class="view-players-btn">📊 저장된 플레이어 보기</a>
+      
+    </div>
   </div>
 
   <ul id="playerList" class="player-list"></ul>
@@ -374,12 +402,33 @@ button:active {
     }
   
     function savePlayersToFirebase() {
-      players.forEach(p => {
-        db.collection('players').add(p)
-          .then(() => console.log(`✅ ${p.name} 저장됨`))
-          .catch(error => console.error(`❌ 저장 실패: ${error}`));
+  const promises = players.map(p => 
+    db.collection('players').add(p)
+  );
+
+  Promise.all(promises)
+    .then(() => {
+      Swal.fire({
+        icon: 'success',
+        title: '저장 완료!',
+        text: '모든 플레이어 정보가 Firebase에 저장되었습니다.',
+        confirmButtonColor: '#00bfff',
+        background: '#1a1a1a',
+        color: '#fff'
       });
-    }
+    })
+    .catch(error => {
+      Swal.fire({
+        icon: 'error',
+        title: '저장 실패',
+        text: `에러: ${error.message}`,
+        confirmButtonColor: '#ff4444',
+        background: '#1a1a1a',
+        color: '#fff'
+      });
+    });
+}
+
   
     function saveToLocal() {
       localStorage.setItem('players', JSON.stringify(players));
