--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet"/>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+  
 
   <style>
     body {
@@ -465,6 +468,11 @@ button:active {
       saveToLocal();
       renderPlayerList();
     }
+
+    window.onload = function () {
+    toastr.success("LoL 팀 밸런서에 오신 것을 환영합니다!");
+  };
+
   </script>
 </body>
 </html>
