--- a/index.html
+++ b/index.html
@@ -165,30 +165,46 @@ button:active {
   <div class="controls">
     <input type="text" id="name" placeholder="닉네임" />
     <select id="tier">
-      <option value="마그챌900+">마/그/챌 900 이상</option>
-      <option value="마그챌750">마/그/챌 750~899</option>
-      <option value="마그챌600">마/그/챌 600~749</option>
-      <option value="마그챌450">마/그/챌 450~599</option>
-      <option value="마그챌300">마/그/챌 300~449</option>
-      <option value="마그챌150">마/그/챌 150~299</option>
-      <option value="마그챌0">마/그/챌 0~149</option>
-      <option value="다이아1">다이아1</option>
-      <option value="다이아2">다이아2</option>
-      <option value="에메랄드+다이아">에메랄드+다이아</option>
-      <option value="에메랄드">에메랄드</option>
-      <option value="플레1">플래티넘1</option>
-      <option value="플레2">플래티넘2</option>
-      <option value="플레3">플래티넘3</option>
-      <option value="플레4">플래티넘4</option>
-      <option value="골드1">골드1</option>
-      <option value="골드2">골드2</option>
-      <option value="골드3">골드3</option>
-      <option value="골드4">골드4</option>
-      <option value="실버1">실버1</option>
-      <option value="실버2">실버2</option>
-      <option value="실버3">실버3</option>
-      <option value="실버4">실버4</option>
-      <option value="브론즈">브론즈 이하</option>
+      <option value="마그챌1800+">마그챌 1800+</option>
+      <option value="마그챌1700-1799">마그챌 1700~1799</option>
+      <option value="마그챌1600-1699">마그챌 1600~1699</option>
+      <option value="마그챌1500-1599">마그챌 1500~1599</option>
+      <option value="마그챌1400-1499">마그챌 1400~1499</option>
+      <option value="마그챌1300-1399">마그챌 1300~1399</option>
+      <option value="마그챌1200-1299">마그챌 1200~1299</option>
+      <option value="마그챌1100-1199">마그챌 1100~1199</option>
+      <option value="마그챌1000-1099">마그챌 1000~1099</option>
+      <option value="마그챌900-999">마그챌 900~999</option>
+      <option value="마그챌800-899">마그챌 800~899</option>
+      <option value="마그챌700-799">마그챌 700~799</option>
+      <option value="마그챌600-699">마그챌 600~699</option>
+      <option value="마그챌500-599">마그챌 500~599</option>
+      <option value="마그챌400-499">마그챌 400~499</option>
+      <option value="마그챌300-399">마그챌 300~399</option>
+      <option value="마그챌200-299">마그챌 200~299</option>
+      <option value="마그챌100-199">마그챌 100~199</option>
+      <option value="마그챌0-99">마그챌 0~99</option>
+      <option value="다이아1">다이아 1</option>
+      <option value="다이아2">다이아 2</option>
+      <option value="다이아3">다이아 3</option>
+      <option value="다이아4">다이아 4</option>
+      <option value="에메랄드1">에메랄드 1</option>
+      <option value="에메랄드2">에메랄드 2</option>
+      <option value="에메랄드3">에메랄드 3</option>
+      <option value="에메랄드4">에메랄드 4</option>
+      <option value="플래티넘1">플래티넘 1</option>
+      <option value="플래티넘2">플래티넘 2</option>
+      <option value="플래티넘3">플래티넘 3</option>
+      <option value="플래티넘4">플래티넘 4</option>
+      <option value="골드1">골드 1</option>
+      <option value="골드2">골드 2</option>
+      <option value="골드3">골드 3</option>
+      <option value="골드4">골드 4</option>
+      <option value="실버1">실버 1</option>
+      <option value="실버2">실버 2</option>
+      <option value="실버3이하">실버 3 이하</option>
+    </select>
+    
     </select>
     <select id="lane1">
       <option value="상관없음">상관없음</option>
@@ -255,33 +271,47 @@ button:active {
   
     const emoji = { 탑: "🔝", 정글: "🌲", 미드: "🧠", 원딜: "🎯", 서폿: "🛡️", 상관없음: "🎲", 미정: "🎲" };
   
-   const scoreTable = {
-          "마그챌900+": { 탑: 56, 정글: 64, 미드: 62, 원딜: 58, 서폿: 54 },
-          "마그챌750": { 탑: 54, 정글: 62, 미드: 60, 원딜: 56, 서폿: 52 },
-          "마그챌600": { 탑: 52, 정글: 60, 미드: 57, 원딜: 53, 서폿: 50 },
-          "마그챌450": { 탑: 50, 정글: 58, 미드: 54, 원딜: 50, 서폿: 48 },
-          "마그챌300": { 탑: 48, 정글: 55, 미드: 52, 원딜: 47, 서폿: 45 },
-          "마그챌150": { 탑: 46, 정글: 52, 미드: 50, 원딜: 45, 서폿: 42 },
-          "마그챌0":   { 탑: 43, 정글: 49, 미드: 48, 원딜: 42, 서폿: 40 },
-          "다이아1":   { 탑: 40, 정글: 45, 미드: 42, 원딜: 40, 서폿: 38 },
-          "다이아2":   { 탑: 34, 정글: 38, 미드: 39, 원딜: 33, 서폿: 32 },
-          "에메랄드+다이아": { 탑: 30, 정글: 36, 미드: 38, 원딜: 31, 서폿: 30 },
-          "에메랄드":   { 탑: 28, 정글: 32, 미드: 37, 원딜: 28, 서폿: 27 },
-          "플레1":     { 탑: 26, 정글: 30, 미드: 29, 원딜: 25, 서폿: 24 },
-          "플레2":     { 탑: 25, 정글: 28, 미드: 27, 원딜: 24, 서폿: 22 },
-          "플레3":     { 탑: 23, 정글: 26, 미드: 24, 원딜: 22, 서폿: 21 },
-          "플레4":     { 탑: 22, 정글: 23, 미드: 22, 원딜: 20, 서폿: 19 },
-          "골드1":     { 탑: 21, 정글: 18, 미드: 17, 원딜: 18, 서폿: 21 },
-          "골드2":     { 탑: 20, 정글: 16, 미드: 16, 원딜: 17, 서폿: 20 },
-          "골드3":     { 탑: 19, 정글: 14, 미드: 15, 원딜: 16, 서폿: 18 },
-          "골드4":     { 탑: 17, 정글: 12, 미드: 13, 원딜: 14, 서폿: 17 },
-          "실버1":     { 탑: 15, 정글: 10, 미드: 12, 원딜: 10, 서폿: 15 },
-          "실버2":     { 탑: 13, 정글: 8,  미드: 10, 원딜: 8,  서폿: 13 },
-          "실버3":     { 탑: 11, 정글: 6,  미드: 7,  원딜: 7,  서폿: 11 },
-          "실버4":     { 탑: 9,  정글: 4,  미드: 5,  원딜: 5,  서폿: 9 },
-          "브론즈":    { 탑: 5,  정글: 2,  미드: 3,  원딜: 2,  서폿: 4 }
-        };
-    
+    const scoreTable = {
+  "마그챌1800+": { 탑: 58.5, 정글: 68.4, 미드: 60.9, 원딜: 62.7, 서폿: 58.2 },
+  "마그챌1700-1799": { 탑: 58.2, 정글: 67.9, 미드: 60.7, 원딜: 62.5, 서폿: 58 },
+  "마그챌1600-1699": { 탑: 57.9, 정글: 67.3, 미드: 60.4, 원딜: 62.4, 서폿: 57.8 },
+  "마그챌1500-1599": { 탑: 57.5, 정글: 66.7, 미드: 60.1, 원딜: 62.2, 서폿: 57.4 },
+  "마그챌1400-1499": { 탑: 57, 정글: 66, 미드: 59.7, 원딜: 61.9, 서폿: 56.8 },
+  "마그챌1300-1399": { 탑: 56.5, 정글: 65, 미드: 59.1, 원딜: 61.4, 서폿: 56.1 },
+  "마그챌1200-1299": { 탑: 55.9, 정글: 63.7, 미드: 58.6, 원딜: 60.7, 서폿: 55.3 },
+  "마그챌1100-1199": { 탑: 55.3, 정글: 62.1, 미드: 57.4, 원딜: 60, 서폿: 54.5 },
+  "마그챌1000-1099": { 탑: 54.7, 정글: 60.3, 미드: 56.5, 원딜: 59.3, 서폿: 53.6 },
+  "마그챌900-999": { 탑: 53.9, 정글: 57.9, 미드: 55.4, 원딜: 58.4, 서폿: 52.5 },
+  "마그챌800-899": { 탑: 52.9, 정글: 55.4, 미드: 52.7, 원딜: 57.4, 서폿: 49.5 },
+  "마그챌700-799": { 탑: 49.4, 정글: 52.8, 미드: 50.8, 원딜: 52.2, 서폿: 47.4 },
+  "마그챌600-699": { 탑: 47.2, 정글: 50.5, 미드: 49, 원딜: 48.5, 서폿: 45.3 },
+  "마그챌500-599": { 탑: 45.6, 정글: 48.3, 미드: 47.7, 원딜: 45.1, 서폿: 43.2 },
+  "마그챌400-499": { 탑: 44.1, 정글: 46.2, 미드: 46.4, 원딜: 42.1, 서폿: 41.2 },
+  "마그챌300-399": { 탑: 42.6, 정글: 44.1, 미드: 45.1, 원딜: 39.5, 서폿: 39.4 },
+  "마그챌200-299": { 탑: 39.7, 정글: 42.2, 미드: 43.3, 원딜: 37.5, 서폿: 38.1 },
+  "마그챌100-199": { 탑: 38.2, 정글: 40.9, 미드: 42.6, 원딜: 35.8, 서폿: 37.1 },
+  "마그챌0-99": { 탑: 37.2, 정글: 38.6, 미드: 40.8, 원딜: 34, 서폿: 36.1 },
+  "다이아1": { 탑: 36.2, 정글: 38.1, 미드: 39.5, 원딜: 31.2, 서폿: 35.1 },
+  "다이아2": { 탑: 34.1, 정글: 38.7, 미드: 38.5, 원딜: 28.9, 서폿: 32.9 },
+  "다이아3": { 탑: 32.1, 정글: 38.7, 미드: 35.8, 원딜: 28.2, 서폿: 31.4 },
+  "다이아4": { 탑: 30.4, 정글: 31.8, 미드: 33.7, 원딜: 26.9, 서폿: 31.7 },
+  "에메랄드1": { 탑: 29, 정글: 29.8, 미드: 31.8, 원딜: 25.1, 서폿: 30.4 },
+  "에메랄드2": { 탑: 27.2, 정글: 27.5, 미드: 29.4, 원딜: 23.7, 서폿: 29 },
+  "에메랄드3": { 탑: 25.8, 정글: 25.6, 미드: 27.4, 원딜: 22.3, 서폿: 27.9 },
+  "에메랄드4": { 탑: 24.7, 정글: 24.1, 미드: 25.4, 원딜: 21.1, 서폿: 26.8 },
+  "플래티넘1": { 탑: 23.1, 정글: 22.5, 미드: 23.4, 원딜: 19.9, 서폿: 25.8 },
+  "플래티넘2": { 탑: 22.1, 정글: 21.1, 미드: 20.8, 원딜: 18.3, 서폿: 24.1 },
+  "플래티넘3": { 탑: 21.3, 정글: 19.8, 미드: 19.3, 원딜: 17.2, 서폿: 23.2 },
+  "플래티넘4": { 탑: 20.5, 정글: 18.5, 미드: 17.8, 원딜: 16.1, 서폿: 22.3 },
+  "골드1": { 탑: 19.6, 정글: 17.1, 미드: 16.3, 원딜: 14.9, 서폿: 21.4 },
+  "골드2": { 탑: 18, 정글: 15, 미드: 14.5, 원딜: 13.3, 서폿: 19.8 },
+  "골드3": { 탑: 17.2, 정글: 14, 미드: 13.6, 원딜: 12.5, 서폿: 18.9 },
+  "골드4": { 탑: 16.4, 정글: 13, 미드: 12.7, 원딜: 11.8, 서폿: 17.8 },
+  "실버1": { 탑: 15.6, 정글: 12, 미드: 11.8, 원딜: 11.2, 서폿: 16 },
+  "실버2": { 탑: 14.8, 정글: 11, 미드: 10.9, 원딜: 10.6, 서폿: 16 },
+  "실버3이하": { 탑: 14, 정글: 10, 미드: 10, 원딜: 10, 서폿: 15 }
+};
+
   
     const players = JSON.parse(localStorage.getItem('players') || '[]');
     renderPlayerList();
